--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   dartz: ^0.9.1
   freezed_annotation: ^0.7.1
+  provider: ^4.1.2
+  flutter_bloc: ^4.0.0
 
 dev_dependencies:
   flutter_test:
