--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,11 @@ dependencies:
   freezed_annotation: ^0.7.1
   provider: ^4.1.2
   flutter_bloc: ^4.0.0
+  postgres: ^2.1.1
+  google_sign_in: ^4.5.1
+  path: ^1.7.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   build_runner:
   freezed: ^0.10.9
 
@@ -46,9 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
