--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: helloworld
 description: A platform for all language learners.
 
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -26,12 +26,12 @@ dev_dependencies:
   injectable_generator: ^0.4.0
 
 flutter:
-
   uses-material-design: true
 
   assets:
     - assets/images/logo.png
-
+    - assets/images/learner_step2.png
+    
   fonts:
     - family: Gill Sans
       fonts:
