signup learner page 1 (undone)
left with validations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/learner_step2.png
-    
+    - assets/images/learner_step1.png
+    - assets/images/mentor_step1.png
+    - assets/images/mentor_step2.png
+    - assets/images/mentor_step3.png
+
   fonts:
     - family: Gill Sans
       fonts:
