--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   freezed_annotation: ^0.7.1
   provider: ^4.1.2
   flutter_bloc: ^4.0.0
+  image_picker: ^0.6.7+1
   postgres: ^2.1.1
+  dropdownfield: ^1.0.0
   google_sign_in: ^4.5.1
   path: ^1.7.0
   get_it: ^4.0.2
@@ -40,3 +42,20 @@ flutter:
     - family: Gill Sans
       fonts:
         - asset: fonts/gillsans.ttf
+
+    - family: Martel Sans
+      fonts:
+        - asset: fonts/MartelSans-Black.ttf
+          weight: 900
+        - asset: fonts/MartelSans-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/MartelSans-Bold.ttf
+          weight: 700
+        - asset: fonts/MartelSans-SemiBold.ttf
+          weight: 600
+        - asset: fonts/MartelSans-Regular.ttf
+          weight: 400
+        - asset: fonts/MartelSans-Light.ttf
+          weight: 300
+        - asset: fonts/MartelSans-ExtraLight.ttf
+          weight: 200
