--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   image_picker: ^0.6.7+1
   postgres: ^2.1.1
   dropdownfield: ^1.0.0
+  url_launcher: ^5.4.10
+  pin_code_fields: ^3.0.1
   google_sign_in: ^4.5.1
   path: ^1.7.0
   get_it: ^4.0.2
@@ -37,6 +39,8 @@ flutter:
     - assets/images/mentor_step1.png
     - assets/images/mentor_step2.png
     - assets/images/mentor_step3.png
+    - assets/images/verifyemail.png
+    - assets/images/verifiedemail.png
 
   fonts:
     - family: Gill Sans
