signup for mentor
left w errors (e.g. unchecked boxes), 'prev' buttons, verifications of password strengths and emails, qualification submission file button function and 'add' button functions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
     - assets/images/mentor_step3.png
     - assets/images/verifyemail.png
     - assets/images/verifiedemail.png
+    - assets/images/applicationmentor.png
 
   fonts:
     - family: Gill Sans
