--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,19 @@ dependencies:
   freezed_annotation: ^0.7.1
   provider: ^4.1.2
   flutter_bloc: ^4.0.0
+  flutter_rating_bar: ^3.0.1+1
   image_picker: ^0.6.7+1
   postgres: ^2.1.1
-  dropdownfield: ^1.0.0
+  dropdownfield: ^1.0.3
   url_launcher: ^5.4.10
   pin_code_fields: ^3.0.1
   google_sign_in: ^4.5.1
   path: ^1.7.0
   get_it: ^4.0.2
+  # multiple_select: ^0.1.22
+  flutter_multiselect: ^0.5.0
+  # searchable_dropdown: ^1.1.3
+  multiselect_formfield: ^0.1.3
   injectable: ^0.4.0+1
   uuid: ^2.0.4
 
@@ -49,6 +54,7 @@ flutter:
     - assets/images/verifyemail.png
     - assets/images/verifiedemail.png
     - assets/images/applicationmentor.png
+    - assets/images/avatar.png
 
   fonts:
     - family: Gill Sans
