--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,13 @@ dependencies:
   get_it: ^4.0.2
   injectable: ^0.4.0+1
   uuid: ^2.0.4
+  sailor: ^0.7.1
 
 dev_dependencies:
   build_runner:
   freezed: ^0.10.9
   injectable_generator: ^0.4.0
+  lint: ^1.2.0
 
 flutter:
   uses-material-design: true
