user profile (incomplete)
image, sending message and menu incomplete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   dropdownfield: ^1.0.0
   url_launcher: ^5.4.10
   pin_code_fields: ^3.0.1
+  flutter_rating_bar: ^3.0.1+1
   google_sign_in: ^4.5.1
   path: ^1.7.0
   get_it: ^4.0.2
