--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   provider: ^4.1.2
   flutter_bloc: ^4.0.0
   image_picker: ^0.6.7+1
+  image_cropper: ^1.2.3
   postgres: ^2.1.1
   dropdownfield: ^1.0.0
   url_launcher: ^5.4.10
@@ -25,6 +26,7 @@ dependencies:
   injectable: ^0.4.0+1
   uuid: ^2.0.4
   sailor: ^0.7.1
+  searchable_dropdown: ^1.1.3
 
 dev_dependencies:
   build_runner:
