--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   uuid: ^2.0.4
   sailor: ^0.7.1
   searchable_dropdown: ^1.1.3
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   build_runner:
   freezed: ^0.10.9
   injectable_generator: ^0.4.0
+  json_serializable: ^3.3.0
   lint: ^1.2.0
 
 flutter:
