--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sailor: ^0.7.1
   searchable_dropdown: ^1.1.3
   json_annotation: ^3.0.1
+  http: ^0.12.1
 
 dev_dependencies:
   build_runner:
