--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   provider: ^4.1.2
   flutter_bloc: ^4.0.0
   image_picker: ^0.6.7+1
+  time_range: ^0.3.0
+  intl: ^0.16.1
   image_cropper: ^1.2.3
   postgres: ^2.1.1
   dropdownfield: ^1.0.3
