--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_rating_bar: ^3.0.1+1
   google_sign_in: ^4.5.1
   path: ^1.7.0
+  path_provider: ^1.6.11
   get_it: ^4.0.2
   # multiple_select: ^0.1.22
   flutter_multiselect: ^0.5.0
