--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   multiselect_formfield: ^0.1.3
   injectable: ^0.4.0+1
   uuid: ^2.0.4
+  tuple: ^1.0.3
   sailor: ^0.7.1
   searchable_dropdown: ^1.1.3
   json_annotation: ^3.0.1
