--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   searchable_dropdown: ^1.1.3
   json_annotation: ^3.0.1
   http: ^0.12.1
+  cookie_jar: ^1.0.1
 
 dev_dependencies:
   build_runner:
