--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   pin_code_fields: ^3.0.1
   flutter_rating_bar: ^3.0.1+1
   google_sign_in: ^4.5.1
-  path: ^1.7.0
+  google_map_location_picker: ^3.3.3
   path_provider: ^1.6.11
   get_it: ^4.0.2
   # multiple_select: ^0.1.22
@@ -35,6 +35,7 @@ dependencies:
   searchable_dropdown: ^1.1.3
   json_annotation: ^3.0.1
   http: ^0.12.1
+  google_maps_flutter: ^0.5.28+1
 
 dev_dependencies:
   build_runner:
