--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
 
 dev_dependencies:
   build_runner:
+  flutter_test:
+    sdk: flutter
+  test: ^1.14.4
   freezed: ^0.10.9
   injectable_generator: ^0.4.0
   json_serializable: ^3.3.0
@@ -69,7 +72,6 @@ flutter:
     - assets/images/applicationmentor.png
     - assets/images/messenger_logo.png
     - assets/images/avatar.png
-    - assets/images/message.png
     - assets/images/booking_done.png
     - assets/images/booking_confirmation.png
 
