--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,6 +43,7 @@ android {
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+	manifestPlaceHolders = [mapsApiKey: "$System.env.MAPS_API_KEY"]
     }
 
     buildTypes {
