--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -50,6 +50,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAq8DekxFfhSpuq7AV7OVNS_Go1pzspxTA"/>
+		android:value="${mapsApiKey}"/>
     </application>
 </manifest>
