--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   freezed_annotation: ^0.7.1
   flutter_bloc: ^4.0.0
   image_picker: ^0.6.7+1
+  file_picker: ^1.13.3
   time_range: ^0.3.0
   intl: ^0.16.1
   image_cropper: ^1.2.3
